--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Sucesso</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Você está autenticado no Keycloak!</h1>
+    <div id="user-info">
+      <h2>Informações do Usuário:</h2>
+      <p>
+        <strong>Nome de Usuário:</strong>
+        <span id="username">Carregando...</span>
+      </p>
+      <p><strong>Roles:</strong> <span id="roles">Carregando...</span></p>
+    </div>
+    <button id="logout-button">Logout</button>
+    <script src="renderer.js"></script>
   </body>
 </html>
